JDK 17: idea inspection fixed: Stream API call chain can be simplified